--- a/Bike+Forecasting.ipynb
+++ b/Bike+Forecasting.ipynb
@@ -48,14 +48,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Data Preparation ##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -150,12 +153,12 @@
     }
    ],
    "source": [
-    "preppeddata=load_data(\"/home/neeraj/Regression_ Demand estimation.csv\")"
+    "preppeddata=load_data(\"Regression_ Demand estimation.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -217,14 +220,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training ##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -258,14 +264,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Try creating network without dropouts. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -310,15 +319,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm_1 (LSTM)                (None, 96)                37632     \n",
+      "lstm_2 (LSTM)                (None, 96)                37632     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 192)               18624     \n",
+      "dense_3 (Dense)              (None, 192)               18624     \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 192)               0         \n",
+      "activation_3 (Activation)    (None, 192)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 193       \n",
+      "dense_4 (Dense)              (None, 1)                 193       \n",
       "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 1)                 0         \n",
+      "activation_4 (Activation)    (None, 1)                 0         \n",
       "=================================================================\n",
       "Total params: 56,449\n",
       "Trainable params: 56,449\n",
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -379,14 +388,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Model Evaluation ##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -404,14 +416,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Run parameter sweep across batch and epoch to find the best parameters that give best R^2 value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -525,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -559,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -583,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -638,57 +653,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now that we have tried all alternatives, progressive batch/epoch, dropout etc., the simplest model that provides good accuracy is with batch size 48 and epoch 10. So for now, we will go with that model. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For now, let's go with batch size of 48 and 10 epochs with no dropouts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 14400 samples, validate on 1236 samples\n",
-      "Epoch 1/8\n",
-      "10s - loss: 2479.4535 - val_loss: 8366.5049\n",
-      "Epoch 2/8\n",
-      "9s - loss: 2363.7802 - val_loss: 6975.2490\n",
-      "Epoch 3/8\n",
-      "9s - loss: 2236.0597 - val_loss: 12716.5718\n",
-      "Epoch 4/8\n",
-      "9s - loss: 2230.7721 - val_loss: 4698.2558\n",
-      "Epoch 5/8\n",
-      "9s - loss: 2191.0816 - val_loss: 6598.3339\n",
-      "Epoch 6/8\n",
-      "9s - loss: 2126.2649 - val_loss: 5083.4972\n",
-      "Epoch 7/8\n",
-      "9s - loss: 2065.2427 - val_loss: 4381.5182\n",
-      "Epoch 8/8\n",
-      "9s - loss: 2021.2016 - val_loss: 4485.5615\n"
-     ]
-    }
-   ],
-   "source": [
-    "finalmodel = setupNetwork(slidingwindow)\n",
-    "finalmodel = trainModel(model, trX.reshape(-1,24,1), trY.reshape(-1,1), 8, 48,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -699,7 +684,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 =  0.894999644776\n"
+      "Train on 14400 samples, validate on 1236 samples\n",
+      "Epoch 1/10\n",
+      "10s - loss: 2867.1916 - val_loss: 4776.4148\n",
+      "Epoch 2/10\n",
+      "10s - loss: 2707.0263 - val_loss: 5978.1012\n",
+      "Epoch 3/10\n",
+      "10s - loss: 2546.9158 - val_loss: 6757.7123\n",
+      "Epoch 4/10\n",
+      "10s - loss: 2465.9893 - val_loss: 5897.2418\n",
+      "Epoch 5/10\n",
+      "9s - loss: 2421.4319 - val_loss: 5742.7474\n",
+      "Epoch 6/10\n",
+      "10s - loss: 2374.0229 - val_loss: 6649.3893\n",
+      "Epoch 7/10\n",
+      "9s - loss: 2264.1990 - val_loss: 9086.7461\n",
+      "Epoch 8/10\n",
+      "10s - loss: 2249.5384 - val_loss: 6196.7814\n",
+      "Epoch 9/10\n",
+      "10s - loss: 2191.3645 - val_loss: 5604.7572\n",
+      "Epoch 10/10\n",
+      "9s - loss: 2101.7306 - val_loss: 4273.9195\n"
+     ]
+    }
+   ],
+   "source": [
+    "finalmodel = setupNetwork(slidingwindow)\n",
+    "finalmodel = trainModel(model, trX.reshape(-1,24,1), trY.reshape(-1,1), 10, 48,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 =  0.892330549527\n"
      ]
     }
    ],
@@ -710,23 +737,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Operationalization ##"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Check for existing **scoring file** and if it exist, remove the scoring file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -750,23 +785,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Write init() and run() functions to score.py file using magic commands"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing bikescore.py\n"
+      "Overwriting bikescore.py\n"
      ]
     }
    ],
@@ -789,49 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def testsavedmodel():\n",
-    "    global trainedmod\n",
-    "    print(\"R^2 = \", compute_perf(finalmodel, tsX, tsY))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R^2 =  0.894999644776\n"
-     ]
-    }
-   ],
-   "source": [
-    "init()\n",
-    "testsavedmodel()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we have verified that we have loaded correct model as R^2 value of model saved above is same as the model loaded from the file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -860,9 +858,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def testsavedmodel():\n",
+    "    global trainedmod\n",
+    "    print(\"R^2 = \", compute_perf(finalmodel, tsX, tsY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 =  0.892330549527\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bikescore\n",
+    "bikescore.init()\n",
+    "testsavedmodel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Now we have verified that we have loaded correct model as R^2 value of model saved above is same as the model loaded from the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -884,21 +932,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "predY = run(tsX[0:5,:])\n",
+    "predY = bikescore.run(tsX[0:5,:])\n",
     "trueY=str(pd.DataFrame(data={\"Actual Values\":np.squeeze(np.reshape(tsY[0:5], newshape= [-1,1]), axis=1)}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -906,11 +958,11 @@
      "output_type": "stream",
      "text": [
       "Scored Values \t\t\t Actual Values\n",
-      "0     778.923157 \t\t\t 0          890.0\n",
-      "1     804.909302 \t\t\t 1          788.0\n",
-      "2     527.499268 \t\t\t 2          513.0\n",
-      "3     385.859161 \t\t\t 3          387.0\n",
-      "4     286.295105 \t\t\t 4          283.0\n"
+      "0     818.072937 \t\t\t 0          890.0\n",
+      "1     853.520874 \t\t\t 1          788.0\n",
+      "2     559.912903 \t\t\t 2          513.0\n",
+      "3     451.836731 \t\t\t 3          387.0\n",
+      "4     266.931793 \t\t\t 4          283.0\n"
      ]
     }
    ],
@@ -921,16 +973,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Generate schema file ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -941,9 +998,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -952,7 +1011,7 @@
        "'main.py'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,16 +1020,18 @@
     "inputs = {\"npa\": SampleDefinition(DataTypes.NUMPY, tsX[0:3,:])}\n",
     "amlo16n.generate_schema(inputs=inputs,\n",
     "                            filepath=\"bikeschema.json\",\n",
-    "                            run_func=run)\n",
+    "                            run_func=bikescore.run)\n",
     "amlo16n.generate_main(user_file=\"bikescore.py\", schema_file=\"bikeschema.json\",\n",
     "                          main_file_name=\"main.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -980,9 +1041,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -991,7 +1054,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Create web service ###\n",
     "Now you can create web service by using command az ml service and passing scoring file, schema file, dependencies file, and model file as shown below\n",
@@ -1020,7 +1086,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### List web service details ###\n",
     "\n",
@@ -1041,14 +1110,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Calling web service ###\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You can call the web service through az ml or curl. Here is the output by calling web service from az ml CLI\n",
     "\n",
