--- a/Bike+Forecasting.ipynb
+++ b/Bike+Forecasting.ipynb
@@ -648,7 +648,7 @@
    ],
    "source": [
     "anothermodel = setupNetworkWithDropouts(slidingwindow)\n",
-    "anothermodel = trainWithVaryingBatchAndEpochs(finalmodel) "
+    "anothermodel = trainWithVaryingBatchAndEpochs(anothermodel) "
    ]
   },
   {
