--- a/Bike+Forecasting.ipynb
+++ b/Bike+Forecasting.ipynb
@@ -1054,6 +1054,94 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup Environment ##\n",
+    "For cluster deployment, yo This assumes you have precreated experimentation and model management account through Ibiza as per instructions in the [Instruction Guide](https://github.com/Azure/ViennaDocs/blob/master/Documentation/Installation.md)\n",
+    "\n",
+    "You can validate your account using the command shown below\n",
+    "\n",
+    "```\n",
+    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml account modelmanagement list\n",
+    "{\n",
+    "  \"created_on\": \"2017-08-22T02:34:00.837873Z\",\n",
+    "  \"description\": \"\",\n",
+    "  \"id\": \"/subscriptions/6d976e3d-6278-4645-ab79-cc5f5fe01a49/resourceGroups/amlviennagrp2/providers/Microsoft.MachineLearningModelManagement/accounts/neerajteam2hosting\",\n",
+    "  \"location\": \"eastus2\",\n",
+    "  \"model_management_swagger_location\": \"https://eastus2.modelmanagement.azureml.net/api/subscriptions/6d976e3d-6278-4645-ab79-cc5f5fe01a49/resourceGroups/amlviennagrp2/accounts/neerajteam2hosting/swagger.json?api-version=2017-09-01-preview\",\n",
+    "  \"modified_on\": \"2017-08-22T02:34:00.837873Z\",\n",
+    "  \"name\": \"neerajteam2hosting\",\n",
+    "  \"resource_group\": \"amlviennagrp2\",\n",
+    "  \"sku\": {\n",
+    "    \"capacity\": 1,\n",
+    "    \"name\": \"S1\"\n",
+    "  },\n",
+    "  \"subscription\": \"6d976e3d-6278-4645-ab79-cc5f5fe01a49\",\n",
+    "  \"tags\": null,\n",
+    "  \"type\": \"Microsoft.MachineLearningModelManagement/accounts\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Let's set this account to be the default account for registering models and web services.\n",
+    "\n",
+    "```\n",
+    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml account modelmanagement set -n neerajteam2hosting -g amlviennagrp2\n",
+    "{\n",
+    "  \"created_on\": \"2017-08-22T02:34:00.837873Z\",\n",
+    "  \"description\": \"\",\n",
+    "  \"id\": \"/subscriptions/6d976e3d-6278-4645-ab79-cc5f5fe01a49/resourceGroups/amlviennagrp2/providers/Microsoft.MachineLearningModelManagement/accounts/neerajteam2hosting\",\n",
+    "  \"location\": \"eastus2\",\n",
+    "  \"model_management_swagger_location\": \"https://eastus2.modelmanagement.azureml.net/api/subscriptions/6d976e3d-6278-4645-ab79-cc5f5fe01a49/resourceGroups/amlviennagrp2/accounts/neerajteam2hosting/swagger.json?api-version=2017-09-01-preview\",\n",
+    "  \"modified_on\": \"2017-08-22T02:34:00.837873Z\",\n",
+    "  \"name\": \"neerajteam2hosting\",\n",
+    "  \"resource_group\": \"amlviennagrp2\",\n",
+    "  \"sku\": {\n",
+    "    \"capacity\": 1,\n",
+    "    \"name\": \"S1\"\n",
+    "  },\n",
+    "  \"subscription\": \"6d976e3d-6278-4645-ab79-cc5f5fe01a49\",\n",
+    "  \"tags\": null,\n",
+    "  \"type\": \"Microsoft.MachineLearningModelManagement/accounts\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Once model management account is created, the next step is to create an environment. Users can create K8 based ACS cluster environment using the following commands.\n",
+    "\n",
+    "Let's validate if our environment has been created and if so, then let's set it to be the default environment for our implementation.\n",
+    "```\n",
+    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml env setup -n amlviennacluster -c -l eastus2 -g amlviennagrp2\n",
+    "Subscription set to Channels\n",
+    "Continue with this subscription (Y/n)? Y\n",
+    "Resource group amlviennagrp2 already exists, skipping creation.\n",
+    "waiting for AAD role to propagate.done\n",
+    "Provisioning compute resources...\n",
+    "Resource creation submitted successfully.\n",
+    "Resources may take 10-20 minutes to be completely provisioned.\n",
+    "To see if your environment is ready to use, run:\n",
+    "  az ml env show -g amlviennagrp2 -n amlviennacluster\n",
+    "Once your environment has successfully provisioned, you can set it as your target context using:\n",
+    "  az ml env set -g amlviennagrp2 -n amlviennacluster\n",
+    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml env list\n",
+    "[\n",
+    "  {\n",
+    "    \"Cluster Name\": \"amlviennacluster\",\n",
+    "    \"Cluster Size\": 2,\n",
+    "    \"Created On\": \"2017-08-22T04:03:09.147000+00:00\",\n",
+    "    \"Location\": \"eastus2\",\n",
+    "    \"Provisioning State\": \"Succeeded\",\n",
+    "    \"Resource Group\": \"amlviennagrp2\",\n",
+    "    \"Subscription\": \"6d976e3d-6278-4645-ab79-cc5f5fe01a49\"\n",
+    "  }\n",
+    "]\n",
+    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml env set -n amlviennacluster -g amlviennagrp2\n",
+    "Compute set to amlviennacluster.\n",
+    "```\n",
+    "\n",
+    "You are all set with environment\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
