--- a/Bike+Forecasting.ipynb
+++ b/Bike+Forecasting.ipynb
@@ -1057,7 +1057,7 @@
    "metadata": {},
    "source": [
     "## Setup Environment ##\n",
-    "For cluster deployment, yo This assumes you have precreated experimentation and model management account through Ibiza as per instructions in the [Instruction Guide](https://github.com/Azure/ViennaDocs/blob/master/Documentation/Installation.md)\n",
+    "For cluster deployment, you need to setup you environment with ACS, storage, ACR, AppInsights etc. Cluster deployment expects that you have precreated experimentation and model management account through Ibiza as per instructions in the [Instruction Guide](https://github.com/Azure/ViennaDocs/blob/master/Documentation/Installation.md)\n",
     "\n",
     "You can validate your account using the command shown below\n",
     "\n",
