--- a/Bike+Forecasting.ipynb
+++ b/Bike+Forecasting.ipynb
@@ -951,7 +951,7 @@
     "You can validate your account using the command shown below\n",
     "\n",
     "```\n",
-    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml account modelmanagement list\n",
+    "C:\\Users\\neerajkh\\Documents\\BikeForecastNotebook>az ml account modelmanagement list\n",
     "{\n",
     "  \"created_on\": \"2017-08-22T02:34:00.837873Z\",\n",
     "  \"description\": \"\",\n",
@@ -974,7 +974,7 @@
     "Let's set this account to be the default account for registering models and web services.\n",
     "\n",
     "```\n",
-    "C:\\Users\\neerajkh\\Documents\\VIenna\\BikeForecastNotebook>az ml account modelmanagement set -n neerajteam2hosting -g amlgrp2\n",
+    "C:\\Users\\neerajkh\\Documents\\BikeForecastNotebook>az ml account modelmanagement set -n neerajteam2hosting -g amlgrp2\n",
     "{\n",
     "  \"created_on\": \"2017-08-22T02:34:00.837873Z\",\n",
     "  \"description\": \"\",\n",
